crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT001_default.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT001.py:14:1: PT001 (pytest-fixture-incorrect-parentheses-style) [*] Use `@pytest.fixture` over `@pytest.fixture()`
   |
14 | @pytest.fixture()
   | ^^^^^^^^^^^^^^^^^ PT001 (pytest-fixture-incorrect-parentheses-style)
15 | def parentheses_no_params():
16 |     return 42
   |
   = help: Remove parentheses

ℹ Safe fix
11 11 |     return 42
12 12 | 
13 13 | 
14    |-@pytest.fixture()
   14 |+@pytest.fixture
15 15 | def parentheses_no_params():
16 16 |     return 42
17 17 | 

PT001.py:24:1: PT001 (pytest-fixture-incorrect-parentheses-style) [*] Use `@pytest.fixture` over `@pytest.fixture()`
   |
24 | / @pytest.fixture(
25 | |
26 | | )
   | |_^ PT001 (pytest-fixture-incorrect-parentheses-style)
27 |   def parentheses_no_params_multiline():
28 |       return 42
   |
   = help: Remove parentheses

ℹ Safe fix
21 21 |     return 42
22 22 | 
23 23 | 
24    |-@pytest.fixture(
25    |-
26    |-)
   24 |+@pytest.fixture
27 25 | def parentheses_no_params_multiline():
28 26 |     return 42
29 27 | 

PT001.py:39:1: PT001 (pytest-fixture-incorrect-parentheses-style) [*] Use `@pytest.fixture` over `@pytest.fixture()`
   |
39 | @fixture()
   | ^^^^^^^^^^ PT001 (pytest-fixture-incorrect-parentheses-style)
40 | def imported_from_parentheses_no_params():
41 |     return 42
   |
   = help: Remove parentheses

ℹ Safe fix
36 36 |     return 42
37 37 | 
38 38 | 
39    |-@fixture()
   39 |+@fixture
40 40 | def imported_from_parentheses_no_params():
41 41 |     return 42
42 42 | 

PT001.py:49:1: PT001 (pytest-fixture-incorrect-parentheses-style) [*] Use `@pytest.fixture` over `@pytest.fixture()`
   |
49 | / @fixture(
50 | |
51 | | )
   | |_^ PT001 (pytest-fixture-incorrect-parentheses-style)
52 |   def imported_from_parentheses_no_params_multiline():
53 |       return 42
   |
   = help: Remove parentheses

ℹ Safe fix
46 46 |     return 42
47 47 | 
48 48 | 
49    |-@fixture(
50    |-
51    |-)
   49 |+@fixture
52 50 | def imported_from_parentheses_no_params_multiline():
53 51 |     return 42
54 52 | 

PT001.py:64:1: PT001 (pytest-fixture-incorrect-parentheses-style) [*] Use `@pytest.fixture` over `@pytest.fixture()`
   |
64 | @aliased()
   | ^^^^^^^^^^ PT001 (pytest-fixture-incorrect-parentheses-style)
65 | def aliased_parentheses_no_params():
66 |     return 42
   |
   = help: Remove parentheses

ℹ Safe fix
61 61 |     return 42
62 62 | 
63 63 | 
64    |-@aliased()
   64 |+@aliased
65 65 | def aliased_parentheses_no_params():
66 66 |     return 42
67 67 | 

PT001.py:74:1: PT001 (pytest-fixture-incorrect-parentheses-style) [*] Use `@pytest.fixture` over `@pytest.fixture()`
   |
74 | / @aliased(
75 | |
76 | | )
   | |_^ PT001 (pytest-fixture-incorrect-parentheses-style)
77 |   def aliased_parentheses_no_params_multiline():
78 |       return 42
   |
   = help: Remove parentheses

ℹ Safe fix
71 71 |     return 42
72 72 | 
73 73 | 
74    |-@aliased(
75    |-
76    |-)
   74 |+@aliased
77 75 | def aliased_parentheses_no_params_multiline():
78 76 |     return 42
79 77 | 

PT001.py:81:1: PT001 (pytest-fixture-incorrect-parentheses-style) [*] Use `@pytest.fixture` over `@pytest.fixture()`
   |
80 |   # https://github.com/astral-sh/ruff/issues/18770
81 | / @pytest.fixture(
82 | |     # TODO: use module scope
83 | |     # scope="module"
84 | | )
   | |_^ PT001 (pytest-fixture-incorrect-parentheses-style)
85 |   def my_fixture(): ...
   |
   = help: Remove parentheses

ℹ Unsafe fix
78 78 |     return 42
79 79 | 
80 80 | # https://github.com/astral-sh/ruff/issues/18770
81    |-@pytest.fixture(
82    |-    # TODO: use module scope
83    |-    # scope="module"
84    |-)
   81 |+@pytest.fixture
85 82 | def my_fixture(): ...
86 83 | 
87 84 | 

PT001.py:88:1: PT001 (pytest-fixture-incorrect-parentheses-style) [*] Use `@pytest.fixture` over `@pytest.fixture()`
   |
88 | @(pytest.fixture())
   | ^^^^^^^^^^^^^^^^^^^ PT001 (pytest-fixture-incorrect-parentheses-style)
89 | def outer_paren_fixture_no_params():
90 |     return 42
   |
   = help: Remove parentheses

ℹ Safe fix
85 85 | def my_fixture(): ...
86 86 | 
87 87 | 
88    |-@(pytest.fixture())
   88 |+@(pytest.fixture)
89 89 | def outer_paren_fixture_no_params():
90 90 |     return 42
91 91 | 

PT001.py:93:1: PT001 (pytest-fixture-incorrect-parentheses-style) [*] Use `@pytest.fixture` over `@pytest.fixture()`
   |
93 | @(fixture())
   | ^^^^^^^^^^^^ PT001 (pytest-fixture-incorrect-parentheses-style)
94 | def outer_paren_imported_fixture_no_params():
95 |     return 42
   |
   = help: Remove parentheses

ℹ Safe fix
90 90 |     return 42
91 91 | 
92 92 | 
93    |-@(fixture())
   93 |+@(fixture)
94 94 | def outer_paren_imported_fixture_no_params():
95 95 |     return 42
